/* Translations */ Added <mouthwatering#49229534>

--- a/en/m/mouthwatering.720181.wikitext
+++ b/en/m/mouthwatering.720181.wikitext
@@ -18,7 +18,13 @@
 
 ====Translations====
 {{trans-top|delicious in taste}}
+* Chinese: {{t|zh|令人垂涎的}}
+* Estonian: {{t|et|isuäratav}}
+* French: {{t+|fr|alléchant|m}}, {{t+|fr|appétissant|m}} 
+* German: {{t+|de|lecker}}, {{t+|de|appetitlich}} 
 * Italian: {{t+|it|appetitoso|m}}, {{t+|it|invitante}}
 {{trans-mid}}
 * Maori: {{t|mi|whakawaiwai}}, {{t|mi|mōwaiwai}}
+* Polish: {{t+|pl|apetyczny}}
+* Portuguese: {{t+|pt|de dar água na boca}}
 {{trans-bottom}}
