--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -43,6 +43,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 * Arabic: {{t|ar|أَفْسَدَ}}, {{t|ar|فَسَدَ}}
 *: Moroccan Arabic: {{t|ary|خْمج|tr=ḵməj}}
 * Armenian: {{t+|hy|փտել}}, {{t+|hy|նեխել}}
+* Assamese: {{t+|as|গেলা}}
 * Azerbaijani: {{t+|az|çürümək}}
 * Basque: {{t|eu|usteldu}}
 * Belarusian: {{t|be|гніць|impf|sc=Cyrl}}
