--- a/en/v/variational.855960.wikitext
+++ b/en/v/variational.855960.wikitext
@@ -10,6 +10,8 @@
 
 ====Translations====
 {{trans-top|of or pertaining to variation}}
+* Chinese:
+*: Mandarin: {{t|cmn|变化的}}
 * Italian: {{t|it|variazionale}}
 {{trans-mid}}
 {{trans-bottom}}
