--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -65,6 +65,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 {{trans-top|to make a noise like a duck}}
 * Arabic: {{t|ar|زَبَطَ}}
 *: Egyptian Arabic: {{t|arz|يكاكي|tr=yekaaki|sc=Arab}}
+* Assamese: {{t|as|পেঁক পেঁকোৱা}}
 * Danish: {{t|da|rappe}}
 * Dutch: {{t+|nl|kwaken}}
 * Finnish: {{t+|fi|vaakkua}}
