--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -80,7 +80,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 * Latin: {{t|la|attendō}}, {{t+|la|audio}}
 * Lojban: {{t|jbo|jundi}}
 * Portuguese: {{t|pt|cuidar de}}
-* Russian: {{t|ru|уделять внимание|impf}}, {{t|ru|уделить внимание}}, {{t+|ru|заниматься|impf}}, {{t+|ru|заняться}}, {{t+|ru|иметь дело|impf}}
+* Russian: {{t|ru|уделя́ть внима́ние|impf}}, {{t|ru|удели́ть внима́ние}}, {{t+|ru|занима́ться|impf}}, {{t+|ru|заня́ться}}, {{t+|ru|име́ть де́ло|impf}}
 * Scottish Gaelic: {{t|gd|sgeadaich}}
 * Spanish: {{t+|es|atender}}, {{t+|es|ocupar|alt=ocuparse de}}
 * Welsh: [[gweini#Welsh|canolbwyntio ar]] [[ar#Welsh|ar]]
