--- a/en/1/1 Maccabees.801820.wikitext
+++ b/en/1/1 Maccabees.801820.wikitext
@@ -4,7 +4,7 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# {{lb|en|biblical}} The first book of [[Maccabees]] of the [[Old Testament]] [[Apocrypha]].
+# {{lb|en|biblical}} The first book of [[Maccabees]] of the [[Old Testament]].
 
 ====Related terms====
 * {{l|en|1 Macc.}}
