--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -79,7 +79,7 @@ From {{inh|en|enm|croke}}, {{m|enm|crok}}, from {{inh|en|ang|*crōc|t=hook, bend
 * Greek: {{t+|el|γκλίτσα|f}}
 * Icelandic: {{t|is|hirðingjastafur|m}}
 {{trans-mid}}
-* Irish: {{t|ga|crúca|m}}
+* Irish: {{t|ga|crúca|m}}, {{t|ga|bachall|f}}, {{t|ga|caimín|m}}, {{t|ga|camóg|f}}
 * Italian: {{t+|it|pastorale|m}}, {{t+|it|vincastro|m}}
 * Latin: {{t|la|agolum|n}}
 * Portuguese: {{t+|pt|cajado|m}}
