t+gd:[[bachall]] ([[WT:EDIT|Assisted]]) <crook#49250764>

--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -84,6 +84,7 @@ From {{inh|en|enm|croke}}, {{m|enm|crok}}, from {{inh|en|ang|*crōc|t=hook, bend
 * Latin: {{t|la|agolum|n}}
 * Portuguese: {{t+|pt|cajado|m}}
 * Russian: {{t+|ru|по́сох|m}}
+* Scottish Gaelic: {{t|gd|bachall|m}}
 * Spanish: {{t+|es|cayado|m}}
 {{trans-bottom}}
 
