--- a/en/s/summable.855773.wikitext
+++ b/en/s/summable.855773.wikitext
@@ -4,7 +4,7 @@
 {{suffix|sum|able|lang=en}}
 
 ===Adjective===
-{{en-adj}}
+{{en-adj|-}}
 
 # {{lb|en|mathematics|of a function}} Having a [[Lebesgue integral]]
 
