--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -47,7 +47,7 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 #: {{ux|en|You don't like potatoes? What do you want me to cook, '''then'''?}}
 # {{lb|en|sequence}} [[at the same time|At the same time]]; [[on the other hand]].
 #: {{ux|en|That’s a nice shirt, but '''then''', so is the other one.}}
-# {{rfv-sense}} {{lb|en|obsolete}} At the time that; [[when]].
+# {{rfv-sense|en}} {{lb|en|obsolete}} At the time that; [[when]].
 #* '''1485''', Sir {{w|Thomas Malory}}, ''{{w|Le Morte d'Arthur}}'', Book I.23, reprinted 1817, Sir Thomas Malory, {{w|William Caxton}}, ''Morte d'Arthur: The Byrth, Lyf, and Actes of Kyng Arthur'', Volume 1, [http://books.google.com.au/books?id=eaUKAAAAYAAJ&pg=PA37&dq=%22the+knyght+sawe+hym+lye+soo+on+the+ground%22&hl=en&sa=X&ei=rAgPT5-YI8O5iAeAobDgCQ&redir_esc=y#v=onepage&q=%22the%20knyght%20sawe%20hym%20lye%20soo%20on%20the%20ground%22&f=false page 37]:
 #*: '''Than''' the knyght sawe hym lye soo on the ground, he alyght and was passynge heuy, for he wende he had slayne hym{{nb...}}.
 # {{lb|en|UK|dialect|affirmation}} Used to contradict an assertion.
