--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -42,6 +42,7 @@
 * Czech: {{t+|cs|kvadrant|m}}
 * French: {{t+|fr|quadrant|m}}
 * German: {{t+|de|Quadrant|m}}
+* Hungarian: {{t+|hu|negyed}}
 * Indonesian: {{t|id|Kuadran|n}}
 {{trans-mid}}
 * Japanese: {{t|ja|象限|tr=shōgen|sc=Jpan}}
