--- a/en/n/Num Lock.746598.wikitext
+++ b/en/n/Num Lock.746598.wikitext
@@ -1,5 +1,4 @@
 {{also|num lock}}
-
 ==English==
 
 ===Alternative forms===
@@ -8,10 +7,10 @@
 ===Noun===
 {{en-noun|head=[[num|Num]] [[lock|Lock]]}}
 
-# {{lb|en|computing}} A [[key]] on a standard extended [[keyboard]] which, when pressed, [[toggle]]s the keys of the [[numeric]] [[keypad]] between [[cursor]] control functions and numeric [[input]] functions.
+# {{lb|en|computing}} A [[key]] on a standard extended [[keyboard]] which, when pressed, [[toggle]]s the keys of the [[numeric]] [[keypad]] between [[cursor]] control functions and numeric [[digit]]s.
 
 ====Translations====
-{{trans-top|a key, which toggles the keys of the numeric keypad}}
+{{trans-top|a key that toggles the function of the numeric keypad}}
 * Russian: {{t|ru|намло́к|m}}
 {{trans-mid}}
 {{trans-bottom}}
