--- a/en/1/1 Maccabees.801820.wikitext
+++ b/en/1/1 Maccabees.801820.wikitext
@@ -4,7 +4,7 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# {{lb|en|biblical}} The first book of [[Maccabees]] of the [[Old Testament]].
+# A book of the [[Catholic]] and [[Eastern Orthodox]] canon of the [[Old Testament]], considered [[apocryphal]] by [[Protestants]].
 
 ====Related terms====
 * {{l|en|1 Macc.}}
