--- a/en/2/2 Maccabees.801821.wikitext
+++ b/en/2/2 Maccabees.801821.wikitext
@@ -3,8 +3,8 @@
 
 ===Proper noun===
 {{en-proper noun}}
-
-# {{lb|en|biblical}} The second book of [[Maccabees]] of the [[Old Testament]] [[Apocrypha]].
+ 
+# A book of the [[Catholic]] and [[Eastern Orthodox]] canon of the [[Old Testament]], considered [[apocryphal]] by [[Protestants]].
 
 ====Related terms====
 * {{l|en|2 Macc.}}
