--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -102,7 +102,7 @@ From {{etyl|enm|en}} {{m|enm|thaugh}}, {{m|enm|thagh|}}, from {{etyl|ang|en}} {{
 * Malay: {{t|ms|walau}}
 * Navajo: {{t|nv|ndi}}
 * Norwegian: {{t+|no|selv om}}
-* Polish: {{t+|pl|choć}}, {{t+|pl|chociaż}}
+* Polish: {{t+|pl|choć}}, {{t+|pl|chociaż}}, {{t+|pl|aczkolwiek}}
 * Portuguese: {{t+|pt|apesar}} de, {{t+|pt|embora}}
 * Romanian: {{t|ro|desi}}, de {{t+|ro|parca}}
 * Russian: {{t+|ru|хотя́}}, {{t+|ru|хоть и}}, {{t|ru|несмотря́ на то́, что}}
