--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -121,6 +121,7 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 * Chinese:
 *: Dungan: {{t|dng|зэ}}, {{t|dng|ю}}
 *: Mandarin: {{qualifier|of future events}} {{t+|cmn|再|tr=zài}}, {{qualifier|of past events}} {{t+|cmn|又|tr=yòu}}, {{qualifier|once again}} {{t+|cmn|遍|alt=再...一遍|tr=zai4... yíbiàn}}, {{t+|cmn|重新|tr=chóngxīn}}
+* Chukchi: {{t|ckt|нэмэ|tr=nėmė}}
 * Crimean Tatar: {{t|crh|kene}}
 * Czech: {{t+|cs|zase}}, {{t+|cs|opět}}, {{t|cs|znova}}
 * Danish: {{t+|da|igen}}
