--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -116,7 +116,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Georgian: {{t|ka|წისქვილი}}
 * German: {{t+|de|Mühle|f}}
 * Greek: {{t+|el|μύλος|m}}, {{t|el|αλεστική μηχανή|f}}
-* Hebrew: {{t+|he|טַחֲנָה|tr=takhánah}}
+* Hebrew: {{t+|he|טַחֲנָה|f|tr=takhánah}}
 * Hindi: {{t+|hi|चक्की|f}}
 * Hungarian: {{t+|hu|malom}}
 * Ido: {{t+|io|muelilo}}
