--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -95,12 +95,14 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Armenian: {{t+|hy|աղաց}}, {{t+|hy|ջրաղաց}}
 * Aromanian: {{t|rup|moarã|f}}
 * Asturian: {{t|ast|molín|m}}
+* Avar: {{t|av|гьобо}}
 * Azerbaijani: {{t+|az|dəyirman}}
 * Bashkir: {{t|ba|тирмән|sc=Cyrl}}
 * Basque: {{t+|eu|errota}}
 * Belarusian: {{t|be|млын|m}}
 * Breton: {{t+|br|milin|f}}
 * Bulgarian: {{t+|bg|ме́лница|f}}
+* Buryat: {{t|bua|тээрмэ}}
 * Catalan: {{t+|ca|molí|m}}
 * Chechen: {{t|ce|хьер}}
 * Cherokee: {{t|chr|ᏍᏙᏍᎩᏱ }}
@@ -124,6 +126,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Georgian: {{t|ka|წისქვილი}}
 * German: {{t+|de|Mühle|f}}
 * Greek: {{t+|el|μύλος|m}}, {{t|el|αλεστική μηχανή|f}}
+* Haitian Creole: {{t|ht|moulen}}
 * Hebrew: {{t+|he|טַחֲנָה|f|tr=takhánah}}
 * Hindi: {{t+|hi|चक्की|f}}
 * Hungarian: {{t+|hu|malom}}
@@ -139,13 +142,16 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Kurdish:
 *: Kurmanji: {{t+|ku|aş|m}}
 *: Sorani: {{t+|ku|ئاش}}
-{{trans-mid}}
 * Kyrgyz: {{t+|ky|тегирмен|sc=Cyrl}}
+{{trans-mid}}
+* Lak: {{t|lbe|гьарахъалу}}
+* Lakota: {{t|lkt|onákpaŋ}}
 * Latin: {{t|la|mola}}, {{t|la|molendinum|n}}
 * Latvian: {{t|lv|malējs}}
 * Lithuanian: {{t+|lt|malūnas|m}}
 * Luxembourgish: {{t|lb|Millen|f}}
 * Macedonian: {{t|mk|млин|m}}, {{t|mk|ме́лница|f}}
+* Malagasy: {{t+|mg|bakaka}}
 * Manx: {{t|gv|mwyllin|f}}
 * Maori: {{t|mi|mira}}
 * Moksha: {{t|mdf|ведькев}}
@@ -159,6 +165,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Persian: {{t+|fa|آسیا|tr=âsyâ|sc=fa-Arab}}, {{t+|fa|آس|tr=âs|sc=fa-Arab}} {{qualifier|archaic}}, {{t|fa|آسیو|tr=âsiyow}} {{qualifier|dialectal}}
 * Polish: {{t+|pl|młyn|m-in}}
 * Portuguese: {{t|pt|moenda|f}}, {{t+|pt|moinho|m}}
+* Romani: {{t|rom|asiav|m}} {{qualifier|Sofia Erli}}
 * Romanian: {{t+|ro|moară}}
 * Romansch: {{t|rm|mulin|m}}, {{t|rm|mulegn}}
 * Russian: {{t+|ru|ме́льница|f}}, {{t+|ru|дроби́лка|f}}
@@ -170,11 +177,13 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|млин|m|sc=Cyrl}}
 *: Roman: {{t+|sh|mlin|m}}
+* Shona: {{t|sn|chigayo|c7}}
 * Sicilian: {{t+|scn|mulinu|m}}
 * Slovak: {{t|sk|mlyn|m}}
 * Slovene: {{t+|sl|mlin|m}}
 * Spanish: {{t+|es|molino|m}}
-* Swedish: {{t+|sv|kvarn|c}}
+* Sranan Tongo: {{t|srn|miri}}
+* Swedish: {{t+|sv|kvarn|c}}, {{t+|sv|mölla|c}}
 * Tajik: {{t|tg|осиё|sc=Cyrl}}, {{t|tg|осиёб|sc=Cyrl}}
 * Tatar: {{t+|tt|тегермән|sc=Cyrl}}
 * Telugu: {{t+|te|గానుగ}}
@@ -182,12 +191,16 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Tswana: {{t|tn|tshilô|c9}}
 * Turkish: {{t+|tr|değirmen}}
 * Turkmen: {{t|tk|degirmen}}
+* Udmurt: {{t|udm|вуко}}
 * Ukrainian: {{t|uk|млин|m}}
 * Uzbek: {{t+|uz|tegirmon}}
 * Venetian: {{t|vec|molin|m}}, {{t|vec|mulin|m}}, {{t|vec|mułin|m}}
 * Vietnamese: {{t+|vi|cối xay}}
+* Walloon: {{t+|wa|molén}}
+* Waray-Waray: {{t|war|gilingan}}
 * Welsh: {{t|cy|melin|f}}
 * West Frisian: {{t|fy|mûne|c}}
+* Yakut: {{t|sah|миэлиҥсэ}}
 * Zazaki: {{t|zza|arye}}
 {{trans-bottom}}
 
