t+pdc:[[Miehl]] t-balance t+eu:[[eihera]] t+wym:[[mejł]] t+csb:[[młin]] t+rgn:[[mulén]] t+cjs:[[тербен]] ([[WT:EDIT|Assisted]]) <mill#49299824>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -98,7 +98,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Avar: {{t|av|гьобо}}
 * Azerbaijani: {{t+|az|dəyirman}}
 * Bashkir: {{t|ba|тирмән|sc=Cyrl}}
-* Basque: {{t+|eu|errota}}
+* Basque: {{t+|eu|errota}}, {{t+|eu|eihera}}
 * Belarusian: {{t|be|млын|m}}
 * Breton: {{t+|br|milin|f}}
 * Bulgarian: {{t+|bg|ме́лница|f}}
@@ -125,6 +125,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Galician: {{t+|gl|muíño|m}}
 * Georgian: {{t|ka|წისქვილი}}
 * German: {{t+|de|Mühle|f}}
+*: Pennsylvania German: {{t|pdc|Miehl|f}}
 * Greek: {{t+|el|μύλος|m}}, {{t|el|αλεστική μηχανή|f}}
 * Haitian Creole: {{t|ht|moulen}}
 * Hebrew: {{t+|he|טַחֲנָה|f|tr=takhánah}}
@@ -136,6 +137,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Italian: {{t+|it|mulino|m}}, {{t+|it|macinatoio|m}}
 * Jamtish: {{t|gmq-jmk|kvæðn|f}}
 * Japanese: {{t|ja|粉砕機|tr=ふんさいき, funsaiki}}, {{t|ja|ミル|tr=miru}}
+* Kashubian: {{t|csb|młin|m}}
 * Kazakh: {{t+|kk|диірмен|sc=Cyrl}}
 * Khakas: {{t|kjh|тербен}}
 * Korean: {{t+|ko|방아}}
@@ -165,6 +167,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Persian: {{t+|fa|آسیا|tr=âsyâ|sc=fa-Arab}}, {{t+|fa|آس|tr=âs|sc=fa-Arab}} {{qualifier|archaic}}, {{t|fa|آسیو|tr=âsiyow}} {{qualifier|dialectal}}
 * Polish: {{t+|pl|młyn|m-in}}
 * Portuguese: {{t|pt|moenda|f}}, {{t+|pt|moinho|m}}
+* Romagnol: {{t|rgn|mulén|m}}
 * Romani: {{t|rom|asiav|m}} {{qualifier|Sofia Erli}}
 * Romanian: {{t+|ro|moară}}
 * Romansch: {{t|rm|mulin|m}}, {{t|rm|mulegn|m}}
@@ -178,6 +181,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 *: Cyrillic: {{t|sh|млин|m|sc=Cyrl}}
 *: Roman: {{t+|sh|mlin|m}}
 * Shona: {{t|sn|chigayo|c7}}
+* Shor: {{t|cjs|тербен|tr=terben}}
 * Sicilian: {{t+|scn|mulinu|m}}
 * Slovak: {{t|sk|mlyn|m}}
 * Slovene: {{t+|sl|mlin|m}}
@@ -196,6 +200,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Uzbek: {{t+|uz|tegirmon}}
 * Venetian: {{t|vec|molin|m}}, {{t|vec|mulin|m}}, {{t|vec|mułin|m}}
 * Vietnamese: {{t+|vi|cối xay}}
+* Vilamovian: {{t|wym|mejł|f}}
 * Walloon: {{t+|wa|molén|m}}
 * Waray-Waray: {{t|war|gilingan}}
 * Welsh: {{t|cy|melin|f}}
