--- a/en/s/sond.856409.wikitext
+++ b/en/s/sond.856409.wikitext
@@ -12,6 +12,15 @@
 
 ----
 
+==Middle English==
+
+===Noun===
+{{head|enm|noun}}
+
+# {{alternative form of|lang=enm|sand}}
+
+----
+
 ==Vilamovian==
 
 ===Noun===
