--- a/en/z/Zacharias.855854.wikitext
+++ b/en/z/Zacharias.855854.wikitext
@@ -32,7 +32,7 @@ From {{etyl|grc|en}} {{m|grc|Ζαχαρίας}}, the New Testament form of the f
 ==German==
 
 ===Proper noun===
-{{head|de|proper noun}}
+{{head|de|proper noun|g=m}}
 
 # [[#English|Zacharias]] {{qualifier|biblical character}}
 # {{given name|male|lang=de}}.
