--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -107,7 +107,10 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Chechen: {{t|ce|хьер}}
 * Cherokee: {{t|chr|ᏍᏙᏍᎩᏱ }}
 * Chinese:
+*: Cantonese: {{t|yue|磨坊|tr=mo6 fong1}}, {{t|yue|粉碎機|tr=fan2 seoi3 gei1}}
+*: Hakka: {{t|hak|磨坊|tr=mò-fòng}}
 *: Mandarin: {{t+|cmn|磨坊|tr=mòfāng|sc=Hani}}, {{t+|cmn|磨機|sc=Hani}}, {{t+|cmn|磨机|tr=mójī|sc=Hani}}, {{t+|cmn|粉碎機|sc=Hani}}, {{t+|cmn|粉碎机|tr=fěnsuìjī|sc=Hani}}
+*: Min Nan: {{t|nan|磨坊|tr=bō-hng}}
 * Chuvash: {{t|cv|арман|sc=Cyrl}}
 * Cornish: {{t|kw|melin|f}}
 * Crimean Tatar: {{t|crh|degirmen}}, {{t|crh|termen}}
@@ -144,8 +147,8 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 * Kurdish:
 *: Kurmanji: {{t+|ku|aş|m}}
 *: Sorani: {{t+|ku|ئاش}}
-* Kyrgyz: {{t+|ky|тегирмен|sc=Cyrl}}
 {{trans-mid}}
+* Kyrgyz: {{t+|ky|тегирмен|sc=Cyrl}}
 * Lak: {{t|lbe|гьарахъалу}}
 * Lakota: {{t|lkt|onákpaŋ}}
 * Latin: {{t|la|mola}}, {{t|la|molendinum|n}}
