--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -250,7 +250,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Urdu: {{t|ur|ٹھڈی|f|tr=ṭhuḍḍī|sc=ur-Arab}}, {{t|ur|چبک|f|tr=cibuk|sc=ur-Arab}}, {{t|ur|ٹھوڑی|f|tr=ṭhoṛī|sc=ur-Arab}}
 * Uyghur: {{t|ug|كەڭېئ|sc=ug-Arab}}
 * Uzbek: {{t+|uz|iyak}}
-* Venetian: {{t|vec|sbessola|f|alt=sbèssola}}, {{t|vec|barbizuolo|m|alt=barbizuòlo}}
+* Venetian: {{t|vec|sbéssoła|f}}, {{t|vec|barbizuolo|m|alt=barbizuòlo}}
 * Vietnamese: {{t+|vi|cằm}}
 * Volapük: {{t+|vo|cün}}
 * Võro: {{t|vro|lõug}}
