--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -89,7 +89,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Hungarian: {{t+|hu|mókus}}
 * Icelandic: {{t+|is|íkorni|m}}
 * Ido: {{t+|io|skurelo}}
-* Indonesian: {{t+|id|bajing}}
+* Indonesian: {{t+|id|bajing}}, {{t+|id|tupai}}
 * Interlingua: {{t|ia|sciuro}}, {{t|ia|scuriolo}}
 * Irish: {{t|ga|iora|m}}, {{t|ga|madra crainn|m}}
 * Isthmus Zapotec: {{t|zai|chisa}}
