--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -4,7 +4,7 @@
 
 ===Etymology===
 {{wikipedia|yes and no}}
-From a variation of {{m|en|yea}}, itself from {{inh|en|enm|ya}}, {{m|enm|ye}}, from {{inh|en|ang|ġēa|t=yes}}, from {{inh|en|gem-pro|*ja|t=yes; thus, so}}, from {{inh|en|ine-pro|*yē|t=already}}. Cognate with {{cog|fy|ja}}, {{cog|nl|ja}}, {{cog|de|ja}}, {{cog|da|ja}}, {{cog|nb|ja}}, {{cog|nn|ja}} and {{cog|sv|ja}}, {{cog|is|já}}.<ref>The American Heritage Dictionary of the English Language, Fourth Edition, 2000</ref> 
+From a variation of {{m|en|yea}}, itself from {{inh|en|enm|ya}}, {{m|enm|ye}}, from {{inh|en|ang|ġēa|t=yes}}, from {{inh|en|gem-pro|*ja|t=yes; thus, so}}, from {{inh|en|ine-pro|*yē|t=already}}. Cognate with {{cog|fy|ja}}, {{cog|nl|ja}}, {{cog|de|ja}}, {{cog|da|ja}}, {{cog|nb|ja}}, {{cog|nn|ja}} and {{cog|sv|ja}}, {{cog|is|já}}.<ref>The American Heritage Dictionary of the English Language, Fourth Edition, 2000</ref> Interestingly, modern "yeah" maintains nearly the same pronunciation as its Old English ancestor (Old English "ġēa" being /jæːɑ/, Modern English "yeah" being [jɛə̯] or [jæə̯]) and consequently has really no other words that rhyme with it in rhotic dialects. The reason behind its real lack of pronunciation shift is unknown, as other words that had similar pronunciations in Old English did shift in pronunciation. It is possible that, due to its constant use (and its never being accepted as a formal term), its pronunciation has remained rigidly in place.
 
 Alternative (but less likely) etymology derives ''yeah'' from a drawling pronunciation of {{m|en|yes}}. For further etymology, see {{l|en|yes}}.<ref>Webster's Third New International Dictionary, Unabridged. 2003.</ref>
 
