--- a/en/w/waddya.741893.wikitext
+++ b/en/w/waddya.741893.wikitext
@@ -4,4 +4,4 @@
 {{en-cont}}
 
 # {{lb|en|informal}} {{eye dialect of|[[what]] [[do]] [[you]]|lang=en}}
-#: ''Waddya want now, kid?''
+#: '''''Waddya''' want now, kid?''
