--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -115,7 +115,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Latvian: {{t+|lv|vāvere|f}}
 * Lithuanian: {{t+|lt|voverė|f}}
 * Low German:
-*: German Low German: {{t|nds-de|Katteker|m}}
+*: German Low German: {{t|nds-de|Katteker|m}}, {{t+|nds-de|Ekatte|f}} {{qualifier|Vest Recklinghausen}}, {{t+|nds-de|Ekättken|n}} {{qualifier|Vest Recklinghausen}}
 * Luxembourgish: {{t+|lb|Kaweechelchen|n}}
 * Lü: {{t|khb|ᦀᦲᦰᦣᦸᧅ|sc=Talu}}
 * Macedonian: {{t|mk|верверица|f}}
