--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -24,6 +24,8 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 # An [[entity]] [[surround]]ed by other entities that are very [[different]] from itself.
 #: ''an '''island''' of tranquility'' (a calm place surrounded by a noisy environment)
 #: ''an '''island''' of colour on a butterfly's wing''
+#* {{quote-journal|author=Daniel Taylor|title=Liverpool go through after Mohamed Salah stops Manchester City fightback|work={{w|The Guardian}} (London)|date=10 April 2018|url=https://www.theguardian.com/football/2018/apr/10/manchester-city-liverpool-champions-league-match-report
+|passage= He was on the ball in a flash, swerving to the left of City’s goalkeeper, Ederson, before shaping his body for a tricky angled finish. He was an '''island''' of composure, floating in his 39th goal of the season with a delicate chip into the corner.}}
 #* '''1939''', Deseret News, October 27 1939, ''Roosevelt Reaffirms American Neutrality''
 #*: King Leopold, speaking in fluent English during his six minute broadcast, said Belgium stood side by side with Holland "an '''Island''' of peace in the interests of all"
 # A [[superstructure]] on an [[aircraft carrier]]'s [[deck]].
