--- a/en/a/ADH.26250.wikitext
+++ b/en/a/ADH.26250.wikitext
@@ -4,7 +4,7 @@
 ===Noun===
 {{en-noun|~}}
 
-# {{initialism of|[[antidiuretic]] [[hormone]]|lang=en}}
+# {{lb|en|hormone}} {{initialism of|antidiuretic hormone|lang=en}}
 # {{initialism of|[[alcohol]] [[dehydrogenase]]|lang=en}}
 
 ===Anagrams===
