--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -40,9 +40,10 @@ Borrowed from {{bor|en|LL.|subtractio|subtractio, subtractionis}}.
 * German: {{t+|de|Subtraktion|f}}, {{t|de|Abziehen|n}}
 * Greek: {{t+|el|αφαίρεση|f}}
 * Hungarian: {{t+|hu|kivonás}}
+* Icelandic: {{t+|is|frádráttur|f}}
 * Ido: {{t+|io|sustraciono}}
-* Italian: {{t+|it|sottrazione|f}}
 {{trans-mid}}
+* Italian: {{t+|it|sottrazione|f}}
 * Japanese: {{t|ja|引き算|tr=ひきざん, hikizan|sc=Jpan}}, {{t|ja|減法|tr=げんぽう, genpō|sc=Jpan}}
 * Norwegian:
 *: Bokmål: {{t|nb|subtraksjon|m}}
