--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -108,6 +108,7 @@ From {{inh|en|enm|sir}}, borrowed from {{bor|en|fro|sire||master, sir, lord}}, f
 * Georgian: {{t|ka|ბატონო}}
 * German: {{t+|de|Herr|m}}, [[mein Herr]] {{g|m}} {{gloss|my lord}}
 * Greek: {{t+|el|κύριος|m}}, [[κύριε]] {{g|m}} ([[vocative case]])
+* Haitian Creole: {{t|ht|konpè}}, {{t|ht|mesye}}
 * Hebrew: {{t|he|אֲדוֹנִי|tr=adoní|sc=Hebr}}
 * Hindi: {{t+|hi|श्रीमान|m}}, {{t+|hi|श्री|sc=Deva}}, {{t+|hi|सर|m|sc=Deva}}, {{t+|hi|साहिब|m|sc=Deva}}, {{t+|hi|महोदय|m|sc=Deva}}, {{t+|hi|जनाब|m|sc=Deva}}
 * Hungarian: {{t+|hu|uram}}
