--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -348,6 +348,9 @@ From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|simplex}}.
 ====Usage notes====
 The first and second meanings are taken when the adjective is placed after the noun. The third meaning is taken when it is located before the noun.
 
+====Descendants====
+* {{desc|bor=1|ro|simplu}}
+
 ===Noun===
 {{fr-noun|m}}
 
