--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -477,6 +477,9 @@ Borrowed from {{bor|es|la|simplex}}.
 #: {{syn|es|soso}}
 # {{lb|es|grammar}} {{l|en|simple}}
 
+====Descendants====
+* {{desc|cbk|simple}}
+
 ===Noun===
 {{es-noun|mf}}
 
