/* Derived terms */ <bend#49334505>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -281,7 +281,9 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 # {{lb|en|music}} A [[glissando]], or [[glide]] between one [[pitch]] and another.
 
 ====Derived terms====
-{{der3|title=terms derived from ''bend (noun)''|around the bend|bend sinister|bendlet|bendsome|bendy|drive somebody round the bend|Great Bend|in bend|sheet bend|string bend|lang=en}}
+{{der3|title=terms derived from ''bend (noun)''|around the bend
+|bend sinister|bendlet|bendsome|bendy|drive somebody round the bend
+|Fort Bend County|Great Bend|in bend|sheet bend|string bend|lang=en}}
 
 ====Translations====
 {{trans-top|curve}}
