--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -12,7 +12,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 ====Noun====
 {{en-noun}}
 
-# {{senseid|en|wager}} A [[wager]], an agreement between two parties that a stake (usually money) will be paid by the loser to the winner (the winner being the one who correctly forecast the outcome of an event on that day
+# {{senseid|en|wager}} A [[wager]], an agreement between two parties that a stake (usually money) will be paid by the loser to the winner (the winner being the one who correctly forecast the outcome of an event).
 #: ''Dylan owes Fletcher $30 from an unsuccessful '''bet'''.''
 # A degree of [[certainty]].
 #: ''It’s a safe '''bet''' that it will rain tomorrow.''
