--- a/en/c/crowdie.856323.wikitext
+++ b/en/c/crowdie.856323.wikitext
@@ -8,7 +8,7 @@ Origin unknown.
 * {{a|UK}} {{IPA|/ˈkɹaʊdi/|lang=en}}
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun|~}}
 
 # {{lb|en|Scotland|now|_|historical}} [[gruel|Gruel]] or thin [[porridge]].
 #* '''1982''', {{w|TC Boyle}}, ''Water Music'', Penguin 2006, p. 270:
