--- a/en/k/kerel.4473.wikitext
+++ b/en/k/kerel.4473.wikitext
@@ -14,6 +14,13 @@ Cognate with German {{m|de|Kerl}}, Dutch Low Saxon {{m|nds-nl|keerl}}, West Fris
 
 # [[lad]], [[fellow]], [[bloke]]
 
+====Descendants====
+* {{desc|fy|keardel|bor=1}}, {{l|fy|kearel}}
+* {{desc|stq|kerel|bor=1}}, {{l|stq|kërel}}, {{l|stq|kërdel}} <ref name="WOS">Wörterbuch der Ostfriesischen Sprache. ten Doornkaat Koolman, J. 1879. 199th page.</ref>
+
+===References===
+<references/>
+
 ===Anagrams===
 * {{l|nl|rekel}}
 
