--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -61,7 +61,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Chinese:
 *: Cantonese: {{t|yue|松鼠|tr=cung4 syu2|sc=Hani}}
 *: Mandarin: {{t+|cmn|松鼠|tr=sōngshǔ|sc=Hani}}, {{t+|cmn|灰鼠|tr=huīshǔ|sc=Hani}}, {{t+|cmn|栗鼠|tr=lìshǔ|sc=Hani}}
-* Chukchi: {{t|ckt|равыԓьэӈ|tr=ravyḷʹėṇ}}
+* Chukchi: {{t|ckt|равыԓьэӈ|tr=ravyḷʹėṇ}}, {{t|ckt|равыԓьэӈыт|p|tr=ravyḷʹėṇyt}}
 * Chuvash: {{t|cv|пакша}}
 * Cornish: {{t|kw|gwiwer|m}}
 * Czech: {{t+|cs|veverka|f}}
