--- a/en/x/X factor.802821.wikitext
+++ b/en/x/X factor.802821.wikitext
@@ -14,7 +14,7 @@
 #* {{quote-text|year=1992|author=Lia Matera|title=Prior Convictions|page=121|passage=We slid into our office, past two women discussing the "'''X factor'''," an apparently undefined quality their firm felt they lacked.}}
 #* {{quote-text|year=1999|author=Joel R. DeLuca|title=Political Savvy: Systematic Approaches to Leadership Behind the Scenes|page=75|passage=The map can be misleading. It can appear to contain all the relevant information, but in real life, there is always an '''X factor'''.}}
 #* {{quote-text|year=2007|author=Tasmina Perry|title=Daddy's Girls|page=12|passage=And put him on an LA film set and he glowed with that indefinable '''X-factor''' that agents the world over wished they could bottle.}}
-# {{lb|en|idiomatic}} A special talent, ability or quality.
+# {{lb|en|idiomatic}} A special talent, ability or quality or its indefinable cause.
 # [[prothrombinase|Prothrombinase]], also called [[factor X]].
 # {{lb|en|astrophysics}} The [[proportionality]] [[constant]] which converts CO emission line brightness to molecular hydrogen mass.
 
