--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -5,7 +5,7 @@
 
 ===Etymology===
 {{PIE root|en|bʰendʰ}}
-From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to bind or bend (a bow), fetter, restrain}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bandijaną||to bend}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰendʰ-||to bind, tie}}. Cognate with {{cog|gmh|benden||to fetter}}, {{cog|da|bænde||to bend}}, {{cog|no|bende||to bend}}, {{cog|fo|benda||to bend, inflect}}, {{cog|is|benda||to bend}}. More at {{l|en|band}}.
+From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), fetter, restrain}}, from {{der|en|gem-pro|*bandijaną||to bend}}, from {{der|en|ine-pro|*bʰendʰ-||to bind, tie}}. Cognate with {{cog|gmh|benden||to fetter}}, {{cog|da|bænde||to bend}}, {{cog|no|bende||to bend}}, {{cog|fo|benda||to bend, inflect}}, {{cog|is|benda||to bend}}. More at {{l|en|band}}.
 
 ===Pronunciation===
 * {{enPR|ĕnd}}, {{IPA|/bɛnd/|lang=en}}
