--- a/en/o/owre.720028.wikitext
+++ b/en/o/owre.720028.wikitext
@@ -14,6 +14,15 @@
 
 ----
 
+==Middle English==
+
+===Pronoun===
+{{head|enm|pronoun}}
+
+# {{alt form of|lang=enm|our}}
+
+----
+
 ==Scots==
 
 ===Adverb===
