--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -100,7 +100,7 @@ From {{inh|en|enm|simple}}, from {{bor|en|fro|-}} and {{bor|en|fr|simple}}, from
 * Hausa: {{t-needed|ha}}
 * Hawaiian: {{t|haw|maʻalahi}}
 * Hebrew: {{t+|he|פשוט|tr=pashút}}
-* Hindi: {{t+|hi|सरल}}|tr=saral, {{qualifier|easy}} {{t+|hi|आसान}}|tr=āsān
+* Hindi: {{t+|hi|सरल}}, {{t+|hi|आसान}} {{gloss|easy}}
 * Hungarian: {{t+|hu|egyszerű}}
 * Icelandic: {{t+|is|einfaldur|m}}
 * Ido: {{t+|io|simpla}}
