/* Translations */ fi <quadrilateral#49377102>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -84,7 +84,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Catalan: {{t|ca|quadrilàter}}
 * Danish: {{t|da|firkantet}}
 * Dutch: {{t|nl|vierhoekig}}, {{t|nl|quadrilateraal}}
-* Finnish: {{t|fi|nelikulmainen}}
+* Finnish: {{t|fi|nelisivuinen}}
 * French: {{t+|fr|quadrilatéral}}
 * Georgian: {{t|ka|ოთხგვერდიანი}}
 * German: {{t|de|vierseitig|n}}
