--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -3,7 +3,7 @@
 {{slim-wikipedia|lang=he}}
 
 ===Etymology===
-In the [[Bible]], it is said to be from the name {{m|he|[[שרה|יִשְׂרֶה]] [[אֵל]]|tr=yisré 'él}} given to [[Jacob]] in {{RQ:Tanach|1|32|29}}, after which his descendants came to be known as [[Israelite]]s and their land as the "kingdom/land of Israel". See {{m|en|Israel}} for more.
+Th name given to [[Jacob]] in the [[Bible]] ({{RQ:Tanach|1|32|29}}), said to be from {{m|he|[[שרה|יִשְׂרֶה]] [[אֵל]]|tr=yisré 'él}}, after which his descendants came to be known as [[Israelite]]s and their land as the "kingdom/land of Israel". See {{m|en|Israel}} for more.
 
 ===Pronunciation===
 * {{m|he|מְדִינַת יִשְׂרָאֵל||State of Israel|tr=medinát yisra'él}}: {{audio|He-Medinat_Israel.ogg|Audio|lang=he}}
