--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -10,6 +10,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 
 ===Pronunciation===
 * {{IPA|/ˈvɒdkə/|lang=en}}
+* {{a|US}} {{IPA|/ˈvɑdkə/|lang=en}}
 * {{audio|en-us-vodka.ogg|Audio (US)|lang=en}}
 
 ===Noun===
