--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -39,7 +39,8 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * {{sense|an entity surrounded by other very different entities}} {{l|en|oasis}}
 
 ====Derived terms====
-{{der3|coney island|desert island|floating island|Grand Island|heat island|high island|interisland|islander|island dispenser|island display|island-hop|island platform|island position|island state|island universe|islandwide|islandy|Kangaroo Island|Long Island|low island|no man is an island|Norfolk Island|Rock Island
+{{der3|coney island|desert island|floating island|Grand Island|heat island|high island|interisland|Island County
+|islander|island dispenser|island display|island-hop|island platform|island position|island state|island universe|islandwide|islandy|Kangaroo Island|Long Island|low island|no man is an island|Norfolk Island|Rock Island
 |safety island|security island|Island|the Island|sea-island|tidal island
 |traffic island|lang=en}}
 
