--- a/en/r/Roemenië.4076.wikitext
+++ b/en/r/Roemenië.4076.wikitext
@@ -16,7 +16,7 @@
 * {{l|nl|Roemeens}}
 * {{l|nl|Roemeense}}
 
-====Descendents====
+====Descendants====
 * {{desc|af|Roemenië}}
 
 [[Category:nl:Countries in Europe]]
