--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -32,7 +32,7 @@
 {{suffix|Estados Unidos|ense|gloss1=United States|lang=es}}
 
 ===Pronunciation===
-* {{IPA|/eˌsta.ðou.niˈðen.se/|/eˌsta.ðow.niˈðen.se/|lang=es}}
+* {{es-IPA|estádounidénse}}
 
 ===Noun===
 {{es-noun|mf}}
