--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -40,7 +40,8 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 
 ====Derived terms====
 {{der3|coney island|desert island|floating island|Grand Island|heat island|high island|interisland|Island County
-|islander|island dispenser|island display|island-hop|island platform|island position|island state|island universe|islandwide|islandy|Kangaroo Island|Long Island|low island|no man is an island|Norfolk Island|Rock Island
+|islander|island dispenser|island display|island-hop|island platform|island position|island state|island universe|islandwide|islandy|Kangaroo Island|Long Island|low island|no man is an island|Norfolk Island
+|Puget Island|Rock Island
 |safety island|security island|Island|the Island|sea-island|tidal island
 |traffic island|lang=en}}
 
