--- a/en/m/moneylender.720245.wikitext
+++ b/en/m/moneylender.720245.wikitext
@@ -10,11 +10,12 @@
 
 ====Translations====
 {{trans-top|person who lends money}}
+* Danish: {{t|da|pengeudlåner|c}}
 * Finnish: {{t+|fi|rahanlainaaja}}
 * Georgian: {{t|ka|მევახშე}}
 * Greek: {{t+|el|τοκιστής|m}}
-* Portuguese: {{t+|pt|agiota|m|f}}
 {{trans-mid}}
+* Portuguese: {{t+|pt|agiota|m|f}}
 * Romanian: {{t+|ro|cămătar|m}}, {{t+|ro|uzurar|m}}, {{t|ro|uzurară|f}}
 * Russian: {{t+|ru|ростовщи́к|m}}
 * Spanish: {{t|es|prestamista|m|f}}
