t+zza:[[dıma]] t+zza:[[bahdo]] t+zza:[[wexto]] t+zza:[[demena]] t+zza:[[solığna]] t+zza:[[no hal]] t+zza:[[fına zi]] t+zza:[[coy ra]] t+zza:[[wıni bı]] t+zza:[[a çerğ]] ([[WT:EDIT|Assisted]]) <then#49402290>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -127,6 +127,7 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 * Urdu: {{t|ur|تب|tr=tab|sc=ur-Arab}}
 * Vietnamese: {{t|vi|khi ấy}}, {{t|vi|khi đó}}, {{t|vi|lúc đó}}, {{t|vi|lúc ấy}}, {{t|vi|hồi đó}}
 * Welsh: {{t|cy|bryd hynny}}
+* Zazaki: {{t|zza|dıma}}, {{t|zza|bahdo}}, {{t|zza|wexto}}
 {{trans-bottom}}
 
 {{trans-top|soon afterward}}
@@ -191,6 +192,7 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 * Urdu: {{t|ur|پھر|tr=phir|sc=ur-Arab}}
 * Venetian: {{t|vec|po}}, {{t|vec|può}}
 * Vietnamese: {{t+|vi|sau đó}}, {{t+|vi|rồi}}, {{t|vi|xong rồi}}
+* Zazaki: {{t|zza|demena}}, {{t|zza|solığna}}
 {{trans-bottom}}
 
 {{trans-top|next in order}}
@@ -235,6 +237,7 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 * Turkish: {{t|tr|ondan sonra}}
 * Vietnamese: {{t+|vi|rồi}}, {{t|vi|rồi đến}}, {{t|vi|rồi tới}}
 * Volapük: {{t+|vo|täno}}
+* Zazaki: {{t|zza|dıma }}
 {{trans-bottom}}
 
 {{trans-top|in that case}}
@@ -280,6 +283,7 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 * Ukrainian: {{t|uk|тоді|tr=todí|sc=Cyrl}}
 * Urdu: {{t|ur|تو|tr=to|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|thì}}, {{t+|vi|thế thì}}, {{t+|vi|vậy thì}}
+* Zazaki: {{t|zza|no hal}}
 {{trans-bottom}}
 
 {{trans-top|at the same time; on the other hand}}
@@ -303,6 +307,7 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 * Russian: {{t+|ru|тогда́}}
 * Spanish: {{t+|es|también}}
 * Swedish: {{t+|sv|samtidigt}}, {{t+|sv|å andra sidan}}
+* Zazaki: {{t|zza|fına zi }}, {{t|zza|coy ra}}
 {{trans-bottom}}
 
 {{checktrans-top}}
@@ -333,6 +338,7 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 * Russian: {{t+|ru|тогда́шний}}
 * Spanish: {{t+|es|de entonces}}
 * Swedish: {{t+|sv|dåvarande}}
+* Zazaki: {{t|zza|wıni bı}}
 {{trans-bottom}}
 
 ====See also====
@@ -357,6 +363,7 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 {{trans-mid}}
 * Swedish: {{t+check|sv|dess}}, {{t+check|sv|då}}
 * Turkish: {{t-check|tr|o zaman}}
+* Zazaki: {{t|zza|a çerğ}}
 {{trans-bottom}}
 
 {{checktrans-top}}
