--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -131,12 +131,12 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Estonian: {{t|et|imearst}}
 * Finnish: {{t+|fi|puoskari}}
 * French: {{t+|fr|charlatan|m}}
-* German: {{t+|de|Quacksalber|m}}
+* German: {{t+|de|Quacksalber|m}}, {{t+|de|Quacksalberin|f}}, {{t+|de|Kurpfuscher|m}}, {{t|de|Kurpfuscherin|f}}, {{t|de|Medikaster|m}} {{qualifier|obsolete}}, {{t|de|Medikasterin|f}} {{qualifier|obsolete}}, {{t|de|Medizinalpfuscher|m}} {{qualifier|obsolete}}, {{t|de|Medizinalpfuscherin|f}} {{qualifier|obsolete}}
 * Greek: {{t+|el|κομπογιαννίτης|m}} (kompoyannítis), {{t+|el|αλμπάνης|m}} (albánis)
 * Hungarian: {{t+|hu|kuruzsló}}
 * Icelandic: {{t+|is|skottulæknir|m}}
-* Ido: {{t+|io|sharlatano}}, {{t|io|medikacho}}
 {{trans-mid}}
+* Ido: {{t+|io|sharlatano}}, {{t|io|medikacho}}
 * Indonesian: {{t+|id|dukun}}
 * Italian: {{t+check|it|ciarlatano|m}}, {{t-check|it|[[medico]] [[empirico]]|m}} <!-- was "[[medico]] [[empirico]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
 * Japanese: {{t|ja|やぶ医者|tr=yabuisha}}, {{t|ja|もぐりの医者|tr=moguri no isha|sc=Jpan}}
@@ -157,7 +157,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Finnish: {{t+|fi|huijari}}
 * French: {{t+|fr|charlatan|m}}
 * Galician: {{t|gl|charlatán|m}}
-* German: {{t+|de|Quacksalber|m}}
+* German: {{t+|de|Quacksalber|m}}, {{t+|de|Quacksalberin|f}}
 * Greek: {{t+|el|τσαρλατάνος|m}} (tsarlatános)
 * Icelandic: {{t+|is|fúskari|m}}, {{t+|is|loddari|m}}, {{t|is|falsari|m}}, {{t|is|svikari|m}}
 {{trans-mid}}
