--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -131,11 +131,11 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Estonian: {{t|et|imearst}}
 * Finnish: {{t+|fi|puoskari}}
 * French: {{t+|fr|charlatan|m}}
-* German: {{t+|de|Quacksalber|m}}, {{t+|de|Quacksalberin|f}}, {{t+|de|Kurpfuscher|m}}, {{t|de|Kurpfuscherin|f}}, {{t|de|Medikaster|m}} {{qualifier|obsolete}}, {{t|de|Medikasterin|f}} {{qualifier|obsolete}}, {{t|de|Medizinalpfuscher|m}} {{qualifier|obsolete}}, {{t|de|Medizinalpfuscherin|f}} {{qualifier|obsolete}}
+* German: {{t+|de|Quacksalber|m}}, {{t+|de|Quacksalberin|f}}, {{t+|de|Kurpfuscher|m}}, {{t|de|Kurpfuscherin|f}}, {{t|de|Medikaster|m}} {{qualifier|obsolete}}, {{t|de|Medikasterin|f}} {{qualifier|obsolete}}, {{t|de|Medizinalpfuscher|m}} {{qualifier|obsolete}}, {{t|de|Medizinalpfuscherin|f}} {{qualifier|obsolete}}, {{t|de|Medizinalstorger|m}} {{qualifier|obsolete}}, {{t|de|Medizinalstorgerin|f}} {{qualifier|obsolete}}, {{t|de|Wunderdoktor|m}}, {{t|de|Wunderdoktorin|f}}, {{t|de|Afterarzt|m}} {{qualifier|obsolete}}, {{t|de|Afterärztin|f}} {{qualifier|obsolete}}
 * Greek: {{t+|el|κομπογιαννίτης|m}} (kompoyannítis), {{t+|el|αλμπάνης|m}} (albánis)
 * Hungarian: {{t+|hu|kuruzsló}}
-* Icelandic: {{t+|is|skottulæknir|m}}
 {{trans-mid}}
+* Icelandic: {{t+|is|skottulæknir|m}}
 * Ido: {{t+|io|sharlatano}}, {{t|io|medikacho}}
 * Indonesian: {{t+|id|dukun}}
 * Italian: {{t+check|it|ciarlatano|m}}, {{t-check|it|[[medico]] [[empirico]]|m}} <!-- was "[[medico]] [[empirico]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
