t+fi:[[daami]] t-balance ([[WT:EDIT|Assisted]]) <dame#49414968>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -36,10 +36,11 @@ From {{inh|en|enm|dame}}, {{m|enm|dam||(term of address or title of a) woman of 
 
 ====Translations====
 {{trans-top|title equivalent to Sir for a female knight}}
+* Finnish: {{t+|fi|daami}}
 * Maori: {{t|mi|kahurangi}}
 * Portuguese: {{t+|pt|dama|f}}
-* Romanian: {{t+|ro|doamnă|f}}
 {{trans-mid}}
+* Romanian: {{t+|ro|doamnă|f}}
 * Russian: {{t+|ru|ле́ди|f}}, {{t|ru|дейм|f|tr=dɛjm}}, {{t+|ru|да́ма|f}}
 * Serbo-Croatian: {{t+|sh|dama}}
 {{trans-bottom}}
