--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -61,7 +61,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 * Dutch: {{t+|nl|bloeden}}
 * Esperanto: {{t|eo|sangi}}
 * Faroese: {{t|fo|bløða}}
-* Finnish: [[vuotaa]] [[veri|verta]]
+* Finnish: {{t|fi|vuotaa verta}}
 * French: {{t+|fr|saigner}}
 * Friulian: {{t|fur|sanganâ}}
 * Galician: {{t+|gl|sangrar}}
