--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -122,6 +122,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 * Bulgarian: {{t|bg|проливам кръв}}, {{t|bg|пускам кръв}}
 * Catalan: {{t+|ca|sagnar}}, {{t+|ca|dessagnar}}
 * Faroese: {{t|fo|taka blóð úr æðr|alt=taka (einhvørjum) blóð úr æðr}}
+* Finnish: {{t|fi|[[vuodattaa]] [[verta]]}}
 * Greek: {{t+|el|αφαιμάσσω}} {{qualifier|literally}}, {{t|el|παίρνω αίμα}}
 * Irish: {{t|ga|fuiligh}}
 {{trans-mid}}
