/* Etymology 2 */ edited using [[wikt:User:Dixtosa/AjaxEdit.js|AjaxEdit]] <bound#49415927>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -97,7 +97,7 @@ See {{m|en|bind}}.
 {{trans-bottom}}
 
 ===Etymology 2===
-From {{etyl|enm|en}} {{m|en|bounde}}, from {{etyl|fro|en}} {{m|en|bunne}}, from {{etyl|ML.|en}} {{m|la|bodina}}, earlier {{m|la|butina||a bound, limit}}
+From {{inh|en|enm|bounde}}, from {{der|en|fro|bunne}}, from {{der|en|ML.|bodina}}, earlier {{m|la|butina||a bound, limit}}
 
 ====Noun====
 {{en-noun}}
