t+fi:[[sitoa]] ([[WT:EDIT|Assisted]]) <bind#49416169>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -91,6 +91,7 @@ From {{der|en|enm|binden}}, from {{der|en|en|bindan}}, from {{der|en|gem-pro|*bi
 * Dutch: {{t+|nl|binden}}
 * Esperanto: {{t-needed|eo}}
 * Faroese: {{t|fo|binda}}
+* Finnish: {{t+|fi|sitoa}}
 * French: {{t+|fr|lier}}, {{t+|fr|attacher}}, {{t+|fr|nouer}}
 * Georgian: {{t-needed|ka}}
 * German: {{t+|de|binden}}
