--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -165,6 +165,7 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 * Greek: {{t+|el|φυσώ}}
 *: Ancient: {{t|grc|ἄημι|sc=polytonic}}
 * Hungarian: {{t+|hu|fúj}}
+* Ido: {{t+|io|suflar}}
 * Indonesian: {{t+|id|tiup}}
 * Irish: {{t|ga|séid}}
 * Italian: {{t+|it|soffiare}}
@@ -242,6 +243,7 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 * Danish: {{t+|da|blæse}}
 * Finnish: {{t+|fi|lentää}}, {{t|fi|lennähtää}}, {{t+|fi|lennellä}}
 * German: {{t+|de|wehen}}
+* Ido: {{t|io|suflesar}}
 * Irish: {{t|ga|séid}}
 * Korean: {{t+|ko|불리다}}
 {{trans-mid}}
