--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -21,7 +21,7 @@ Borrowed from {{bor|en|fro|division}}, from {{der|en|la|divisio|divisio, divisio
 #: {{ux|en|I've got ten '''divisions''' to do for my homework.}}
 # {{lb|en|military}} A [[formation]], usually made up of two or three [[brigade]]s.
 # A [[section]] of a large [[company]].
-# {{lb|en|taxonomy}} A [[rank]] (Latin ''divisio'') below [[kingdom]] and above [[class]], particularly used of [[plant|plants]] or [[fungus|fungi]], also (particularly of [[animal]]s) called a [[phylum]]; a [[taxon]] at that rank
+# {{lb|en|taxonomy}} A [[rank]] below [[kingdom]] and above [[class]], particularly used of [[plant|plants]] or [[fungus|fungi]], also (particularly of [[animal]]s) called a [[phylum]]; a [[taxon]] at that rank.
 #: {{ux|en|Magnolias belong to the '''division''' Magnoliophyta.}}
 # A disagreement; a difference of viewpoint between two sides of an argument.
 # {{lb|en|music}} A florid instrumental variation of a melody in the 17th and 18th centuries, originally conceived as the dividing of each of a succession of long notes into several short ones.
@@ -285,6 +285,7 @@ Borrowed from {{bor|en|fro|division}}, from {{der|en|la|divisio|divisio, divisio
 * Finnish: {{t+|fi|kaari}}, {{t+|fi|pääjakso}}
 * Icelandic: {{t|is|skipting|f}}, {{t+|is|fylking|f}}
 * Khmer: {{t+|km|សាខា|tr=sar khar|sc=Khmr}}
+* Latin: {{t|la|divisio}}
 * Macedonian: {{t|mk|оддел|m|tr=óddel|sc=Cyrl}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|divisão|f}}
