--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -168,7 +168,7 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 * Novial: {{t|nov|tand}}
 * Old English: {{t|ang|þā}}
 * Pashto: {{t+|ps|بيا|tr=byâ}}
-* Persian: {{t+|fa|سپس|tr=sepas|sc=fa-Arab}}, {{t+|fa|پس|tr=pas|sc=fa-Arab}}, {{t+|fa|بعد|tr=ba'd|sc=fa-Arab}}
+* Persian: {{t+|fa|سپس|tr=sepas|sc=fa-Arab}}, {{t+|fa|بعد|tr=ba'd|sc=fa-Arab}}
 * Polish: (a) [[następnie]], (a) {{t+|pl|potem}}
 * Portuguese: {{t+|pt|então}}, {{t+|pt|depois}}, {{t|pt|em seguida}}
 * Romanian: {{t+|ro|apoi}}
