--- a/en/h/have a way with.775543.wikitext
+++ b/en/h/have a way with.775543.wikitext
@@ -3,7 +3,7 @@
 ===Verb===
 {{head|en|verb}}
 
-# {{lb|en|idiomatic}} To be [[skilled]], [[adept]], or [[graceful]] in something.
+# {{lb|en|idiomatic|informal}} To be [[skilled]], [[adept]], or [[graceful]] in something.
 #: ''She '''has a way with''' animals, and they seem instinctively to trust her.''
 
 ====Translations====
