--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -213,25 +213,19 @@ Initialism of {{m|ga|ceirnín dlúth|t=compact disc}}, but simultaneously a borr
 
 ==Japanese==
 
+===Etymology===
+From {{bor|ja|en|CD}}.
+
 ===Pronunciation===
-{{ja-pron|シーディー}}
+{{ja-pron|シーディー|acc=3}}
 
 ===Noun===
 {{ja-noun|シーディー}}
 
-# [[compact disk]]
+# {{abbreviation of|sort=しいでぃい|lang=ja|コンパクトディスク|tr=konpakuto disuku||{{l|en|compact disc}}|dot=;}} a {{l|en|CD}}
 #: {{ja-usex|それはヘビメタの'''CD'''です。|それ は ヘビメタ の '''シーディー''' です。|That is a heavy metal '''CD'''.}}
-# [[cash dispenser]]; an automatic cash machine for withdrawing.
+# {{abbreviation of|lang=ja|キャッシュディスペンサー|tr=kyasshu disupensā||{{l|en|cash dispenser}}|sort=しいでぃい}}
 #: {{ja-usex|コンビニの'''CD'''からお金を引き出しました。|コンビニ の '''シーディー''' から おかね を ひきだしました。|I withdrew money from a '''CD''' at a convenient store.}}
-
-====Synonyms====
-* {{sense|compact disk}} {{ja-r|コンパクト ディスク}}
-* {{sense|cash dispenser}} {{ja-r|自動現金支払機|じどう げんきん しはらいき}}
-
-====See also====
-* {{sense|cash dispenser}} {{ja-l|ATM}}, {{ja-r|自動現金預払機|じどう げんきん よはらいき}}
-
-[[Category:Japanese terms written in foreign scripts]]
 
 ----
 
