--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -229,7 +229,7 @@ From {{bor|ja|en|CD|sort=しいでぃい}}.
 #: {{ja-usex|コンビニの'''CD'''からお金を引き出しました。|コンビニ の '''シーディー''' から おかね を ひきだしました。|I withdrew money from a '''CD''' at a convenient store.}}
 
 ===See also===
-* {{ja-r|CD-ROM|シーディー-ロム}}
+* {{ja-l|CD-ROM|tr=shīdī-romu}}
 
 ----
 
