/* Japanese */ <CD-ROM#49429980>

--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -30,10 +30,10 @@
 From {{bor|ja|en|CD-ROM|sort=しいでぃいろむ}}
 
 ===Pronunciation===
-{{ja-pron|シーディーロム|acc=5}}
+{{ja-pron|シーディー ロム|acc=5}}
 
 ===Noun===
-{{ja-noun|シーディーロム}}
+{{ja-noun|シーディー-ロム}}
 
 # {{lb|ja|computing|sort=しいでぃいろむ}} {{l|en|CD-ROM}}
 
