--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -25,9 +25,10 @@
 ----
 
 ==Japanese==
+{{swp|lang=ja}}
 
 ===Etymology===
-From {{bor|ja|en|CD-ROM|sort=しいでぃいろむ}}
+From {{bor|ja|en|CD-ROM|sort=しいでぃいろむ}}.
 
 ===Pronunciation===
 {{ja-pron|シーディー ロム|acc=5}}
