--- a/en/w/WTO.26234.wikitext
+++ b/en/w/WTO.26234.wikitext
@@ -39,6 +39,6 @@ From {{bor|ja|en|WTO|sort=たぶりゅうてぃいおお'}}
 ===Proper noun===
 {{ja-pos|proper|ダブリューティーオー}}
 
-# {{synof|lang=ja|世界貿易機関|tr=Sekai Bōeki Kikan||{{l|en|World Trade Organization}}}}
+# {{synof|lang=ja|世界貿易機関|tr=Sekai Bōeki Kikan||{{l|en|World Trade Organization}}}}; the {{l|en|WTO}}
 
 {{C|ja|Organizations|sort=たぶりゅうてぃいおお'}}
