t+fi:[[zapoteekki]] ([[WT:EDIT|Assisted]]) <Zapotec#49442522>

--- a/en/z/Zapotec.775464.wikitext
+++ b/en/z/Zapotec.775464.wikitext
@@ -12,6 +12,7 @@ From {{der|en|es|zapoteca}}, from {{etyl|nah|en}} {{m|nah|Tzapotēcah}}, plural 
 ====Translations====
 {{trans-top|member of indigenous people of Mexico}}
 * Classical Nahuatl: {{t|nci|Tzapotecatl}}
+* Finnish: {{t+|fi|zapoteekki}}
 * French: {{t|fr|Zapothèque}}
 {{trans-mid}}
 * Spanish: {{t+|es|zapoteca|m}}
