--- a/en/m/miss out.802552.wikitext
+++ b/en/m/miss out.802552.wikitext
@@ -1,12 +1,11 @@
 {{also|missout}}
-
 ==English==
 
 ===Verb===
 {{en-verb|misses out|missing out|missed out}}
 
 # To miss an experience or lose an opportunity, etc. that should not be missed.
-#: ''Anybody who does not try the homemade ice cream is really '''missing out'''.''
+#: {{ux|en|Anybody who does not try the homemade ice cream is really '''missing out'''.}}
 #: ''I think he's going to '''miss out''' on the opportunity to date her if he doesn't hurry.''
 #* {{quote-journal
 |date=May 5, 2012
