--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -41,4 +41,4 @@ From {{bor|ja|en|CD-ROM|sort=しいでぃいろむ}}.
 ===See also===
 * {{ja-r|CD|シーディー}}
 * {{ja-r|ROM|ロム}}
-* {{ja-r|DVD-ROM|ディーブイディー-ロム}}
+* {{ja-l|DVD-ROM||dībuidī-romu}}
