t+ca:[[rata mesquera]] ([[WT:EDIT|Assisted]]) <muskrat#49448132>

--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -39,7 +39,7 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a {{m|en|
 * Belarusian: {{t|be|анда́тра|f}}
 * Breton: {{t+|br|razh-musk}}
 * Bulgarian: {{t|bg|мускус}}
-* Catalan: {{t-needed|ca}}
+* Catalan: {{t|ca|rata mesquera|f}}
 * Cherokee: {{t|chr|ᏎᎳᎩᏍᏆ|tr=selagisqua|sc=Cher}}
 * Chinese:
 *: Mandarin: {{t+|cmn|麝鼠|tr=shèshǔ|sc=Hani}}
