t+gl:[[enumerar]] ([[WT:EDIT|Assisted]]) <enumerate#49452971>

--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -22,6 +22,7 @@ From {{etyl|la|en}} {{m|la|enumerātus}} < {{m|la|enumerō}}.
 * Dutch: {{t|nl|uittellen}}
 * Finnish: {{t+|fi|luetella}}
 * French: {{t+|fr|énoncer}}
+* Galician: {{t+|gl|enumerar}}
 * German: {{t+|de|aufzählen}}
 * Greek: {{t+|el|απαριθμώ}}
 {{trans-mid}}
