--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -156,6 +156,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 * Norwegian:
 *: Bokmål: {{t|nb|annonse|m}}
 *: Nynorsk: {{t|nn|annonse|m}}
+* Occitan: {{t|oc|anóncia|f}}
 * Polish: {{t+|pl|ogłoszenie|n}}, {{t+|pl|anons|m-in}}
 * Portuguese: {{t+|pt|edital|m}}
 * Romanian: {{t+|ro|anunț|n}} (public)
