/* Translations */ Added Ancient Greek translation of this word. <weight#49461132>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -119,6 +119,7 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 * Georgian: {{t-needed|ka}}
 * German: {{t+|de|Gewicht|n}}
 * Greek: {{t+|el|βάρος|n}}
+*: Ancient: {{t|grc|βάρος|n}}
 * Hawaiian: {{t|haw|kaumaha}}
 * Hebrew: {{t+|he|מִשְׁקָל|m|tr=mishkál|sc=Hebr}}
 * Hindi: {{t+|hi|भार|m|sc=Deva}}
