--- a/en/m/millpond.720302.wikitext
+++ b/en/m/millpond.720302.wikitext
@@ -6,7 +6,16 @@
 ===Noun===
 {{en-noun}}
 
-# A [[pond]] or [[reservoir]] produced by damming a [[river]] or [[stream]] in order to provide a steady source of [[water]] for a [[millrace]]
+# A [[pond]] or [[reservoir]] produced by damming a [[river]] or [[stream]] in order to provide a steady source of [[water]] for a [[millrace]].
+
+====Translations====
+{{trans-top|pond or reservoir}}
+* Chinese:
+*: Mandarin: {{t-needed|cmn}}
+{{trans-mid}}
+* Finnish: {{t-needed|fi}}
+* Portuguese: {{t-needed|pt}}
+{{trans-bottom}}
 
 ====Derived terms====
 * {{l|en|calm as a millpond}}
