--- a/en/m/millpond.720302.wikitext
+++ b/en/m/millpond.720302.wikitext
@@ -13,7 +13,7 @@
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t|fi|myllylampi}}
 * Portuguese: {{t-needed|pt}}
 {{trans-bottom}}
 
