--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -1,16 +1,16 @@
 {{also|QUA|quá|quà|quả|quạ|qu'à}}
 ==English==
 
-===Etymology===
+===Etymology 1===
 From {{etyl|la|en}} {{m|la|qua||in the capacity of}}.
 
-===Pronunciation===
+====Pronunciation====
 * {{IPA|/kwɑː/|/kweɪ/|lang=en}}
 * {{rhymes|eɪ|lang=en}}
 
 {{rfap|lang=en}}
 
-===Preposition===
+====Preposition====
 {{en-prep}}
 
 # in the [[capacity]] of
@@ -26,7 +26,7 @@ From {{etyl|la|en}} {{m|la|qua||in the capacity of}}.
 #* '''2009''': Ken Levy, [http://papers.ssrn.com/sol3/papers.cfm?abstract_id=1404387 ''Killing, Letting Die, and the Case for Mildly Punishing Bad Samaritanism''], Georgia Law Review, p. 24.
 #*: Blame '''''qua''''' attitude is the feeling or belief that an individual has committed a wrongdoing, usually a wrongful action and/or harm, and can be reasonably expected not to have committed this wrongdoing. Blame qua practice is the public expression of this attitude – usually by means of censure (written or verbal criticism) or punishment. Generally, the morally worse the wrongdoing, the more severe the censure/punishment.
 
-====Translations====
+=====Translations=====
 {{trans-top|in the capacity of}}
 * Danish: {{t+|da|qua}}, {{t|da|i egenskab af}}
 * Dutch: [[qua#Dutch|qua]], {{t|nl|als zodanig}}, {{t|nl|wat betreft}}
@@ -35,6 +35,18 @@ From {{etyl|la|en}} {{m|la|qua||in the capacity of}}.
 * Greek: {{t+|el|ως|sc=Grek}}
 * Swedish: {{t|sv|i egenskap av}}
 {{trans-bottom}}
+
+===Etymology 2===
+Imitative.
+
+====Interjection====
+{{en-intj}}
+
+# The [[caw]]ing sound of a [[crow]].
+#* '''1909''', ''The Country Gentleman'' (volume 74, page 266)
+#*: Crows have a language of their own in a wild state that any observant person can learn. {{...}} Then he would straighten his head back and, with the most comical bowing and wagging, say: "'''Qua qua qua, qua qua qua'''" for perhaps a minute.
+#* '''2012''', Jaman Tree, ''I Crow River''
+#*: '''Qua... qua... qua...''' out of the blue I hear the crows cawing with great fanfare as they announce to the world at large that they are here by my side and intend to probe into my being.
 
 ===Anagrams===
 * {{anagrams|en|QAU|UAQ}}
