--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -12,7 +12,7 @@
 * {{rhymes|ɛn|lang=en}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{etyl|ang|en}} {{m|ang|þonne}}, {{m|ang|þanne}}, {{m|ang|þænne||then, at that time}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*þan||at that (time), then}}, from earlier ''*þam'', from {{etyl|ine-pro|en}} {{m|ine-pro|*tóm}}, accusative masculine of {{m|ine-pro|*to-||demonstrative pronoun, that}}. Cognate with {{cog|nl|dan||then}}, {{cog|de|dann||then}}, {{cog|is|þá||then}}. Doublet of {{l|en|than}}.
+From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{etyl|ang|en}} {{m|ang|þonne}}, {{m|ang|þanne}}, {{m|ang|þænne||then, at that time}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*þan||at that (time), then}}, from earlier ''*þam'', from {{etyl|ine-pro|en}} {{m|ine-pro|*tóm}}, accusative masculine of {{m|ine-pro|*só||demonstrative pronoun, that}}. Cognate with {{cog|nl|dan||then}}, {{cog|de|dann||then}}, {{cog|is|þá||then}}. Doublet of {{l|en|than}}.
 
 False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from {{noncog|urj-pro|*tä}} + {{noncog|urj-pro|*-na}}) whence also {{m|fi|tänään||today}}.
 
