t+hu:[[hadifogoly]] ([[WT:EDIT|Assisted]]) <prisoner of war#49488322>

--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -26,6 +26,7 @@
 * Georgian: {{t|ka|სამხედრო ტყვე}}
 * German: {{t+|de|Kriegsgefangener|m}}, {{t|de|Kriegsgefangene|f}}
 * Greek: {{t|el|αιχμάλωτος πολέμου|m|f}}
+* Hungarian: {{t+|hu|hadifogoly}}
 * Icelandic: {{t|is|stríðsfangi|m}}
 * Indonesian: {{t|id|tahanan perang}}
 * Interlingua: {{t|ia|prisionero de guerra}}
