--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -154,6 +154,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Kalmyk: {{t|xal|арл|sc=Cyrl}}
 * Kannada: {{t+|kn|ದ್ವೀಪ|sc=Knda}}
 * Karachay-Balkar: {{t|krc|айрымкан|tr=ayrımkan|sc=Cyrl}}, {{qualifier|Balkar}} {{t|krc|айрыкам|tr=ayrıkam|sc=Cyrl}}
+* Kashubian: {{t-needed|csb}}
 * Kazakh: {{t+|kk|арал|sc=Cyrl}}, {{t|kk|атау|sc=Cyrl}}
 * Khakas: {{t|kjh|олтырых}}
 * Khmer: {{t+|km|កោះ}}
