--- a/en/x/X factor.802821.wikitext
+++ b/en/x/X factor.802821.wikitext
@@ -47,6 +47,6 @@
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t-check|fi|X-[[kerroin]]}}
 * Russian: {{t-needed|ru}}
 {{trans-bottom}}
