t+gl:[[persoal]] ([[WT:EDIT|Assisted]]) <staff#49498004>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -150,6 +150,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 * Esperanto: {{t-needed|eo}}
 * Finnish: {{t+|fi|henkilöstö}}, {{t+|fi|henkilökunta}}
 * French: {{t+|fr|personnel|m}}
+* Galician: {{t|gl|persoal|m}}
 * Georgian: {{t+|ka|შტატი}}, {{t|ka|პერსონალი}}
 * German: {{t+|de|Belegschaft|f}}, {{t+|de|Personal|n}}, {{t+|de|Stab|m}}, {{t+|de|Mitarbeiter|m-p}}
 * Greek: {{t+|el|προσωπικό|n}}, {{t+|el|επιτελείο|n}}
