/* Translations */ hede seems to be a fabricated word which is only used by some internet users. <thing#49500673>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -205,7 +205,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Thai: {{t+|th|สิ่ง}}
 * Tibetan: {{t-needed|bo}}
 * Tupinambá: {{t|tpn|mba'e}}
-* Turkish: {{t+|tr|şey}}, {{t+|tr|nesne}}, {{t+|tr|nen}}, {{t+|tr|hede}}
+* Turkish: {{t+|tr|şey}}, {{t+|tr|nesne}}, {{t+|tr|nen}}
 * Turkmen: {{t+|tk|zat}}
 * Udmurt: {{t|udm|арбери}}
 * Ukrainian: {{t|uk|річ|f|sc=Cyrl}}
