t+ru:[[веверица]] t+ru:[[векша]] t+uk:[[вивірка]] t+ru:[[вевёрка]] t-balance ([[WT:EDIT|Assisted]]) <squirrel#49501585>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -119,10 +119,10 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Luxembourgish: {{t+|lb|Kaweechelchen|n}}
 * Lü: {{t|khb|ᦀᦲᦰᦣᦸᧅ|sc=Talu}}
 * Macedonian: {{t|mk|верверица|f}}
+{{trans-mid}}
 * Malay:
 *: Jawi: {{t|ms|توڤاي|sc=Arab}}, {{t|ms|باجيڠ|sc=Arab}}
 *: Rumi: {{t|ms|tupai}}, {{t|ms|bajing}}
-{{trans-mid}}
 * Maltese: {{t|mt|skwiril|m}}
 * Manx: {{t|gv|fiorag|f}}
 * Maori: {{t|mi|kirera}}
@@ -157,7 +157,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Romani: {{t|rom|viaveritsa|f}}
 * Romanian: {{t+|ro|veveriță|f}}
 * Romansch: {{t|rm|stgilat|m}}
-* Russian: {{t+|ru|бе́лка|f}}
+* Russian: {{t+|ru|бе́лка|f}}, {{t+|ru|ве́верица|f}} {{qualifier|obsolete}}, {{t+|ru|ве́кша|f}} {{qualifier|regional}}, {{t|ru|вевёрка|f}} {{qualifier|obsolete}}
 * Sami:
 *: Northern Sami: {{t|se|oarri}}
 * Sanskrit: {{t+|sa|वृक्षमर्कटिका|f}}, {{t+|sa|वृक्षशायिका|f}}
@@ -194,7 +194,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Turkish: {{t+|tr|sincap}}, {{t+|tr|değin}}, {{t+|tr|çekelez}}
 * Turkmen: {{t+|tk|awusiýdik}}, {{t|tk|belka}}
 * Tuvan: {{t|tyv|дииң}}
-* Ukrainian: {{t+|uk|бі́лка|f}}
+* Ukrainian: {{t+|uk|бі́лка|f}}, {{t+|uk|ви́вірка|f}}
 * Urdu: {{t|ur|گلہری|f|tr=gilahrī|sc=ur-Arab}}
 * Uyghur: {{t+|ug|تىيىن|sc=ug-Arab}}
 * Uzbek: {{t+|uz|olmaxon}}
