--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -122,6 +122,7 @@ From {{der|en|la|minimum}}, neuter form of {{m|la|minimus||least, smallest}}.
 * {{l|cs|maximum}}
 
 ====Related terms====
+* See {{l|cs|minus}}
 * {{l|cs|minimalismus}}
 * {{l|cs|minimalista}}
 * {{l|cs|minimalizace}}
