t+uk:[[удар]] ([[WT:EDIT|Assisted]]) <blow#49510083>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -556,6 +556,7 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 * Swahili: {{t+|sw|panchi}}
 * Swedish: {{t+|sv|slag|n}}
 * Telugu: {{t+|te|దెబ్బ}}, {{t+|te|వేటు}}
+* Ukrainian: {{t+|uk|уда́р}}
 {{trans-bottom}}
 
 {{trans-top|damaging occurrence}}
@@ -572,6 +573,7 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 * Swahili: {{t+|sw|panchi}}
 * Swedish: {{t+|sv|slag|n}}
 * Telugu: {{t+|te|దెబ్బ}} (2)
+* Ukrainian: {{t+|uk|уда́р}}
 {{trans-bottom}}
 
 ===Etymology 4===
