--- a/en/p/pariente.4512.wikitext
+++ b/en/p/pariente.4512.wikitext
@@ -49,3 +49,4 @@ From {{etyl|la|es}} {{m|la|parēns}}, ''parentis''.
 * {{l|es|emparentar}}
 
 [[Category:es:Family]]
+[[Category:Spanish 3-syllable words]]
