t+gl:[[consumir]] ([[WT:EDIT|Assisted]]) <consume#49525179>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -56,6 +56,7 @@ From {{etyl|fro|en}} {{m|fro|consumer}}, from {{etyl|la|en}} {{m|la|consumere}}.
 * Dutch: {{t+|nl|consumeren}}, {{t+|nl|verbruiken}}
 * Finnish: {{t+|fi|kuluttaa}}
 * French: {{t+|fr|consommer}}
+* Galician: {{t|gl|consumir}}
 * German: {{t+|de|verbrauchen}}
 * Hebrew: {{t+|he|צרך|tr=tsarákh}}
 * Hungarian: {{t+|hu|fogyaszt}}
