t+bo:[[རུལ]] t-balance ([[WT:EDIT|Assisted]]) <rot#49525664>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -69,8 +69,8 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 * Japanese: {{t+|ja|腐る|tr=くさる, kusaru|sc=Jpan}}
 * Khmer: {{t+|km|រលួយ|tr=rɔluəy|sc=Khmr}}
 * Korean: {{t+|ko|썩다}}, {{t+|ko|부패하다}}
-* Latgalian: {{t|ltg|pyut}}, {{t|ltg|trupēt}}
 {{trans-mid}}
+* Latgalian: {{t|ltg|pyut}}, {{t|ltg|trupēt}}
 * Latin: {{t|la|pūtesco}}, {{t|la|tābesco}}
 * Latvian: {{t+|lv|pūt}}
 * Lithuanian: {{t|lt|pūti}}
@@ -94,6 +94,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 * Swedish: {{t+|sv|ruttna}}
 * Tajik: {{t|tg|вайрон шудан}}, {{t|tg|пӯсидан}}
 * Thai: {{t+|th|ผุ}}
+* Tibetan: {{t|bo|རུལ}}
 * Turkish: {{t+|tr|çürümek}}
 * Ukrainian: {{t|uk|гни́ти|impf|sc=Cyrl}}
 * Uzbek: {{t+|uz|chirimoq}}
