--- a/en/t/trebbiano.745853.wikitext
+++ b/en/t/trebbiano.745853.wikitext
@@ -1,10 +1,15 @@
 ==English==
 {{wikipedia}}
+[[File:Trebbiano d' Abruzzo grapes before veraison.jpg|thumb|right|220px|trebbiano (1)]]
+[[File:Trebbiano d'Abruzzo.jpg|thumb|right|220px|trebbiano (2)]]
 ===Alternative forms===
 * {{l|en|Trebbiano}}
 
 ===Etymology===
 From {{bor|en|it|trebbiano}}.
+
+===Pronunciation===
+{{rfp|lang=en}}
 
 ===Noun===
 {{en-noun|~}}
@@ -23,6 +28,8 @@ From {{bor|en|it|trebbiano}}.
 * Italian: {{t+|it|trebbiano|m}}
 {{trans-mid}}
 {{trans-bottom}}
+
+----
 
 ==Italian==
 
