--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -42,7 +42,7 @@ Imitative.
 ====Interjection====
 {{en-intj}}
 
-# The [[caw]]ing sound of a [[crow]].
+# {{n-g|The [[caw]]ing sound of a [[crow]].}}
 #* '''1909''', ''The Country Gentleman'' (volume 74, page 266)
 #*: Crows have a language of their own in a wild state that any observant person can learn. {{...}} Then he would straighten his head back and, with the most comical bowing and wagging, say: "'''Qua qua qua, qua qua qua'''" for perhaps a minute.
 #* '''2012''', Jaman Tree, ''I Crow River''
