/*Middle English*/ <bound#49550553>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -318,3 +318,12 @@ Alteration of {{m|en|boun}}, with '''-d''' partly for [[euphonic]] effect and pa
 [[Category:English irregular simple past forms]]
 [[Category:English terms with multiple etymologies]]
 [[Category:en:Gaits]]
+
+----
+
+==Middle English==
+
+===Noun===
+{{head|enm|noun}}
+
+# {{alternative form of|lang=enm|band}}
