/* Norwegian Bokmål */ derived terms <dame#49551089>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -203,11 +203,12 @@ From {{der|nb|la|domina}}, via {{bor|nb|fro|dame}} and late {{inh|nb|non|damma}}
 {{nb-noun-c}}
 
 # a {{l|en|lady}}, {{l|en|woman}}
-# {{qualifier|card games}} a {{l|en|queen}}
+# {{q|card games}} a {{l|en|queen}}
 
 ====Derived terms====
 * {{l|nb|dametoalett}}
 * {{l|nb|dameundertøy}}
+* {{l|nb|hoffdame}}
 
 ===References===
 * {{R:The Bokmål Dictionary}}
