--- a/en/s/soldados.855915.wikitext
+++ b/en/s/soldados.855915.wikitext
@@ -1,15 +1,33 @@
 ==Portuguese==
 
-===Verb===
-{{pt-pp|soldad|soldar}}
+===Adjective===
+{{head|pt|adjective form|g=m-p}}
 
-# {{pt-verb form of|soldar|ar|past participle|masculine|plural}}
+# {{pt-adj form of|soldado|m|pl}}
+
+===Noun===
+{{head|pt|noun form|g=m-f-p}}
+
+# {{pt-noun form of|soldado|onlym|pl}}
+
+===Verb===
+{{head|pt|past participle form|g=m-p}}
+
+# {{pt-verb-form-of|soldar}}
 
 ----
 
 ==Spanish==
 
-===Noun===
-{{head|es|noun form|g=m-p}}
+===Pronunciation===
+* {{es-IPA}}
 
-# {{plural of|soldado|lang=es}}
+===Noun===
+{{head|es|noun plural form|g=m-p}}
+
+# {{inflection of|soldado||p|lang=es}}
+
+===Verb===
+{{head|es|past participle form|g=m-p}}
+
+# {{es-verb form of|soldar|ending=-ar|mood=participle|number=p|gender=m}}
