/* Translations */ add table for "ability to take a punch" sense <chin#49592649>

--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -273,6 +273,10 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * ǃXóõ: {{t|nmn|dzàni}}
 {{trans-bottom}}
 
+{{trans-top|ability to take a punch}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ====Verb====
 {{en-verb|chinn}}
 
