t+es:[[{{t-needed}}]] t+ja:[[{{t-needed}}]] t+tl:[[{{t-needed}}]] t+uk:[[{{t-needed}}]] t+th:[[{{t-needed}}]] t+pt:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <chin#49592769>

--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -274,7 +274,13 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 {{trans-bottom}}
 
 {{trans-top|ability to take a punch}}
+* Japanese: {{t-needed|ja}}
+* Portuguese: {{t-needed|pt}}
+* Spanish: {{t-needed|es}}
 {{trans-mid}}
+* Tagalog: {{t-needed|tl}}
+* Thai: {{t-needed|th}}
+* Ukrainian: {{t-needed|uk}}
 {{trans-bottom}}
 
 ====Verb====
