t+vi:[[cạc cạc]] t-balance ([[WT:EDIT|Assisted]]) <quack#49599080>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -32,8 +32,8 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Icelandic: {{t|is|andagagg|n}}, {{t|is|guss|n}}
 * Ido: {{t+|io|kroaso}}, {{t+|io|bramo}}
 * Irish: {{t|ga|vác|m}}
-{{trans-mid}}
 * Italian: {{t|it|qua qua|m}}
+{{trans-mid}}
 * Japanese: {{t|ja|ガー ガー|tr=gā-gā}}, {{t|ja|クェッ クェッ|tr=quek-quek}}, {{t|ja|クワッ クワッ|tr=quwak-quwak}}
 * Macedonian: {{t|mk|квак|tr=kvák}}
 * Malay: {{t|ms|wak}}
@@ -47,6 +47,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * Tagalog: {{t|tl|kwak-kwak}}
 * Thai: {{t|th|ก้าบ}}
 * Turkish: {{t+|tr|vak}}
+* Vietnamese: {{t|vi|cạc cạc}}
 * Welsh: {{t|cy|cwac}}
 {{trans-bottom}}
 
