t+es:[[ahorrar]] ([[WT:EDIT|Assisted]]) <save up#49606981>

--- a/en/s/save up.746191.wikitext
+++ b/en/s/save up.746191.wikitext
@@ -13,6 +13,7 @@
 * Greek: {{t+|el|αποταμιεύω}}
 {{trans-mid}}
 * Maori: {{t|mi|penapena}}
+* Spanish: {{t+|es|ahorrar}}
 {{trans-bottom}}
 
 ===References===
