--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -229,7 +229,7 @@ From {{inh|non|gem-pro|*meganą}}.
 
 ==Sundanese==
 
-===Noun===
-{{head|su|noun|Sundanese spelling|ᮙᮦᮌ}}
+===Romanization===
+{{su-rom}}
 
-# [[cloud]] {{gloss|visible mass of water droplets suspended in the air}}
+# {{su-romanization of|ᮙᮦᮌ}}
