--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -180,9 +180,6 @@ From {{inh|id|ms|mega}}, from {{der|id|sa|मेघ|t=cloud}}.
 
 ==Malay==
 
-===Alternative forms===
-* {{alter|ms|ميݢ}}
-
 ===Etymology===
 From {{der|ms|sa|मेघ|t=cloud}}.
 
@@ -192,7 +189,7 @@ From {{der|ms|sa|मेघ|t=cloud}}.
 * {{rhymes|eɡə|ɡə|ə|lang=ms}}
 
 ===Noun===
-{{head|ms|noun|Jawi spelling|ميݢ}}
+{{ms-noun|j=ميݢ}}
 
 # [[cloud]] {{gloss|visible mass of water droplets suspended in the air}}
 #: {{syn|ms|awan}} / {{l|ms|اون}} {{q|more commonly used}}
@@ -212,6 +209,10 @@ From {{inh|non|gem-pro|*meganą}}.
 
 ====Conjugation====
 {{non-conj-pp|meg|má|2t=mát|mátt|3i=mætt|megat, mátt}}
+
+====Descendants====
+* {{desc|gmq-osw|magha}}, {{l|gmq-osw|mugha}}
+** {{desc|sv|må}}
 
 ===References===
 * {{R:Zoega}}
