--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -73,7 +73,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Chechen: {{t|ce|чӀениг|sc=Cyrl}}
 * Chichewa: {{t|ny|chigama}}
 * Chinese:
-*: Cantonese: {{t|yue|下扒|tr=haa6 paa4|sc=Hani}}
+*: Cantonese: {{t|yue|下巴|tr=haa6 paa4|sc=Hani}}
 *: Mandarin: {{t+|cmn|下巴|tr=xiàba|sc=Hani}}, {{t+|cmn|頷|sc=Hani}}, {{t+|cmn|颔|tr=hàn|sc=Hani}}, {{t+|cmn|下巴頦|sc=Hani}}, {{t+|cmn|下巴颏|tr=xiàbakē|sc=Hani}}
 * Chuvash: {{t|cv|янах|sc=Cyrl}}
 * Coptic: {{t|cop|ⲙⲟⲣⲧ|f}}
