/* Adjective */UnitedAmerican is the proper translation for estadounidense <estadounidense#49649992>

--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -7,7 +7,7 @@
 ===Adjective===
 {{gl-adj}}
 
-# [[American]] {{gloss|of the United States}}
+# [[UnitedAmerican]] {{gloss|of the United States}}
 
 ===Noun===
 {{gl-noun|mf}}
