Reverted edits by [[Special:Contributions/99.203.17.7|99.203.17.7]]. If you think this rollback is in error, please leave a message on my talk page. <estadounidense#49649996>

--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -7,7 +7,7 @@
 ===Adjective===
 {{gl-adj}}
 
-# [[UnitedAmerican]] {{gloss|of the United States}}
+# [[American]] {{gloss|of the United States}}
 
 ===Noun===
 {{gl-noun|mf}}
