/* Noun */ Added quotation <island#49653861>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -19,6 +19,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 {{en-noun}}
 
 # A contiguous [[area]] of [[land]], smaller than a [[continent]], totally [[surround]]ed by [[water]].
+#* {{RQ:Donne Devotions|chapter=17. Meditation|page=98|lines=2–3|passage=No man is an '''''Iland''''', intire of it selfe; every man is a peece of the ''Continent'', a part of the ''maine''; {{...}}}}
 #* '''2002''', Gordon L. Rottman, ''World War 2 Pacific island guide''
 #*: Sumatra is the second largest '''island''' in the East Indies and the fourth largest in the world covering 182,859 square miles.
 # An [[entity]] [[surround]]ed by other entities that are very [[different]] from itself.
