/* Galician */ additions <mundo#49660469>

--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -52,13 +52,40 @@ From {{etyl|es|cbk}} {{m|es|mundo||world}}.
 
 ==Galician==
 
-===Etymology===
-From {{etyl|la|gl}} {{m|la|mundus}}.
+===Etymology 1===
+From Old Galician and {{inh|gl|roa-opt|mundo}}, from {{inh|gl|la|mundus}}.
 
-===Noun===
+====Pronunciation====
+* {{IPA|/ˈmuðo̝/|lang=gl}}
+
+====Noun====
 {{gl-noun|m}}
 
 # [[world]]
+# a [[large]] [[quantity]]
+#: {{syn|gl|monte}}
+
+===Etymology 2===
+From *''mũũdo'', from older ''muudo'', from {{inh|gl|VL.|mōlūtus}}, alternative past participle of {{m|la|molō}}.
+
+====Alternative forms====
+* {{l|gl|mudo}}
+
+====Pronunciation====
+* {{IPA|/ˈmunðo̝/|lang=gl}}
+
+====Adjective====
+{{gl-adj|m|f=munda}}
+
+# [[milled]], [[ground]]
+#: {{syn|gl|moído}}
+
+===References===
+* {{R:DDGM}}
+* {{R:gl:CX|muudo}}
+* {{R:DDLG}}
+* {{R:TILG|moer}}
+* {{R:TLPGP|mudo}}
 
 ----
 
