/*Middle English*/ <simple#49663585>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -399,6 +399,20 @@ Borrowed from {{bor|gl|la|simplex}}. Displaced {{cog|roa-opt|simplez}}.
 
 ----
 
+==Middle English==
+
+===Adjective===
+{{head|enm|adjective}}
+
+# {{alternative form of|lang=enm|symple}}
+
+===Noun===
+{{head|enm|noun}}
+
+# {{alternative form of|lang=enm|symple}}
+
+----
+
 ==Norwegian Bokmål==
 
 ===Adjective===
@@ -438,7 +452,7 @@ Borrowed from {{bor|fro|la|simplex}}.
 ====Descendants====
 * {{desc|fr|simple}}
 ** {{desc|bor=1|ro|simplu}}
-* {{desc|bor=1|enm|simple}}
+* {{desc|bor=1|enm|symple}}, {{l|enm|simple}}
 ** {{desc|sco|semple}}
 ** {{desc|en|simple}}
 ----
