added [[Category:en:Animal body parts]] using [[Help:Gadget-HotCat|HotCat]] <periostracum#49668249>

--- a/en/p/periostracum.741502.wikitext
+++ b/en/p/periostracum.741502.wikitext
@@ -11,3 +11,5 @@ Literally "surrounding shell," from {{prefix|peri|ostracum|lang=en}}.
 
 ====Derived terms====
 * {{l|en|periostracal}}
+
+[[Category:en:Animal body parts]]
