--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -212,8 +212,11 @@ From {{inh|non|gem-pro|*meganą}}, {{m|gem-pro|*maganą}}.
 {{non-conj-pp|meg|má|2t=mát|mátt|3i=mætt|megat, mátt}}
 
 ====Descendants====
-* {{desc|gmq-osw|magha}}, {{l|gmq-osw|mugha}}
-** {{desc|sv|må}}
+* {{desc|is|mega}}
+* {{desc|fo|mega}}
+* {{desctree|gmq-osw|magha}}
+* {{desc|da|måtte}}
+* {{desc|no|måtte}}, {{l|no|må}}, {{l|no|umage}}
 
 ===References===
 * {{R:Zoega}}
